move website files to pages folder

--- a/pages/demo.html
+++ b/pages/demo.html
@@ -9,20 +9,20 @@
     </title>
     <meta name="description" content="SelfStorage demo">
 
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="assets/favicon.ico">
 
     <meta property="og:title" content="SelfStorage Demo">
     <meta property="og:description" content="SelfStorage demo">
     <meta property="og:image" content="favicon.png">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://semilateral.github.io/selfstorage/demo.html">
 
     <meta name="twitter:card" content="summary">
 
-    <link rel="canonical" href="">
+    <link rel="canonical" href="https://semilateral.github.io/selfstorage/demo.html">
 
-    <link rel="stylesheet" href="index.css">
-    <script src="../dist/demo.js" defer></script>
+    <link rel="stylesheet" href="assets/demo.css">
+    <script src="assets/demo.js" defer></script>
   </head>
   <body>
     <div>
