--- a/pages/testpage.html
+++ b/pages/testpage.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="robots" content="noindex">
+
     <title>
       SelfStorage Test
     </title>
