remove .html from demo canonicals

--- a/pages/demo.html
+++ b/pages/demo.html
@@ -15,11 +15,11 @@
     <meta property="og:description" content="SelfStorage demo">
     <meta property="og:image" content="favicon.png">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://semilateral.github.io/selfstorage/demo.html">
+    <meta property="og:url" content="https://semilateral.github.io/selfstorage/demo">
 
     <meta name="twitter:card" content="summary">
 
-    <link rel="canonical" href="https://semilateral.github.io/selfstorage/demo.html">
+    <link rel="canonical" href="https://semilateral.github.io/selfstorage/demo">
 
     <link rel="stylesheet" href="assets/demo.css">
     <script src="assets/demo.js" defer></script>
